update file references in notebook

--- a/irrlotcode 2019-11/notebooks/irrlotcode.ipynb
+++ b/irrlotcode 2019-11/notebooks/irrlotcode.ipynb
@@ -58,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x10a4b3b10>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x10bda9c90>"
       ]
      },
      "execution_count": 4,
@@ -88,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1266cf1d0>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x12908bed0>"
       ]
      },
      "execution_count": 5,
@@ -121,7 +121,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x12677f4d0>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1290a4410>"
       ]
      },
      "execution_count": 6,
@@ -144,7 +144,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1267efe10>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x12908bb90>"
       ]
      },
      "execution_count": 7,
@@ -556,7 +556,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1266cf0d0>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x12908bad0>"
       ]
      },
      "execution_count": 9,
@@ -588,7 +588,7 @@
    "source": [
     "conn = psycopg2.connect(os.getenv('EDMCONN'))\n",
     "cur = conn.cursor()\n",
-    "with open('../output/irregular_angles.csv', 'r') as f:\n",
+    "with open('../output/irregular_lots.csv', 'r') as f:\n",
     "    reader = csv.reader(f)\n",
     "    for row in reader:\n",
     "        cur.execute(\n",
@@ -612,7 +612,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1267f7c50>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x129061b10>"
       ]
      },
      "execution_count": 11,
@@ -1279,7 +1279,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "469847696bea48868b7eb12251638f9d",
+       "model_id": "93a5946c32f9429fbffff24279da2be9",
        "version_major": 2,
        "version_minor": 0
       },
