add new table containing attached buildings with neighbors within 1ft away

--- a/proxcode 2020-03/notebooks/ProxCode Analysis.ipynb
+++ b/proxcode 2020-03/notebooks/ProxCode Analysis.ipynb
@@ -139,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1030e6e10>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x120ae68d0>"
       ]
      },
      "execution_count": 5,
@@ -151,6 +151,7 @@
     "sql.execute('''DROP TABLE IF EXISTS dcp.buildings_23;\n",
     "DROP TABLE IF EXISTS dcp.lot23_no_neighboring_bldg;\n",
     "DROP TABLE IF EXISTS dcp.lot23_no_neighboring_bldg_1ft;\n",
+    "DROP TABLE IF EXISTS dcp.lot23_neighboring_bldg_1ft;\n",
     "DROP TABLE IF EXISTS dcp.buildings_1;\n",
     "DROP TABLE IF EXISTS dcp.lot1_bldg;\n",
     "DROP TABLE IF EXISTS dcp.lot1_neighboring_bldg;''', cnx)"
@@ -212,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x11e20ef90>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1210fca50>"
       ]
      },
      "execution_count": 7,
@@ -306,12 +307,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Break out counts by borough"
+    "Get the buildings that have a neighboring building within 1 foot"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1308"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql.execute('''CREATE TABLE dcp.lot23_neighboring_bldg_1ft AS\n",
+    "SELECT l.*\n",
+    "FROM dcp.lot23_no_neighboring_bldg l\n",
+    "WHERE l.bbl IN (\n",
+    "SELECT a.bbl\n",
+    "    FROM dcp.lot23_no_neighboring_bldg a, dcp.bldg_footprints b\n",
+    "    WHERE ST_DWithin(a.building_geom, b.geom, 1)\n",
+    "    AND a.bin <> b.bin\n",
+    "    AND ST_Distance(a.building_geom, b.geom) > 0)\n",
+    "''', cnx)\n",
+    "lot23_neighboring_bldg_1ft = pd.read_sql_query('''SELECT * FROM dcp.lot23_neighboring_bldg_1ft;''', cnx)\n",
+    "lot23_neighboring_bldg_1ft.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Break out counts by borough"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +417,7 @@
        "4      SI    847"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +583,7 @@
        "10    None                                NULL      4"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +681,7 @@
        "1      Y    207"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +750,7 @@
        "162869"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +793,7 @@
        "13627"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +827,7 @@
        "13627"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +919,7 @@
        "4      SI   1794"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1092,7 @@
        "11    None                                NULL     40"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1190,7 @@
        "1      Y    650"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
