add excel spreadsheet

--- a/lotarea 2020-04/notebooks/LotArea Analysis.ipynb
+++ b/lotarea 2020-04/notebooks/LotArea Analysis.ipynb
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1323,7 @@
        "0    177169688      166673822.0  10495866.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,6 +1336,7 @@
     "LEFT JOIN dcp.irrlot_irregular i\n",
     "ON  i.irrlotcode = 'N'\n",
     "AND i.bbl = p.\"BBL\"''', cnx)\n",
+    "summary.to_csv('../output/summary.csv', index=False)\n",
     "summary"
    ]
   },
@@ -1348,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1428,7 @@
        "4      QN     81772905       81524810.0    248095.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,6 +1444,7 @@
     "AND i.irrlotcode = 'N'\n",
     "GROUP BY \"Borough\"\n",
     "ORDER BY difference DESC;''', cnx)\n",
+    "boro_breakout.to_csv('../output/boro.csv', index=False)\n",
     "boro_breakout"
    ]
   },
@@ -1500,173 +1502,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>LandUse</th>\n",
-       "      <th>def</th>\n",
-       "      <th>lotarea_sum</th>\n",
-       "      <th>replacement_sum</th>\n",
-       "      <th>difference</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Vacant Land</td>\n",
-       "      <td>19827730</td>\n",
-       "      <td>5147687.0</td>\n",
-       "      <td>14680043.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>07</td>\n",
-       "      <td>Transportation and Utility</td>\n",
-       "      <td>71574803</td>\n",
-       "      <td>63542228.0</td>\n",
-       "      <td>8032575.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NULL</td>\n",
-       "      <td>6833982</td>\n",
-       "      <td>3204918.0</td>\n",
-       "      <td>3629064.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>02</td>\n",
-       "      <td>Multi-Family Walkup Buildings</td>\n",
-       "      <td>10315334</td>\n",
-       "      <td>9600931.0</td>\n",
-       "      <td>714403.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>01</td>\n",
-       "      <td>One and Two Family Buildings</td>\n",
-       "      <td>3832394</td>\n",
-       "      <td>3598882.0</td>\n",
-       "      <td>233512.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>06</td>\n",
-       "      <td>Industrial and Manufacturing</td>\n",
-       "      <td>1857582</td>\n",
-       "      <td>1818215.0</td>\n",
-       "      <td>39367.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Mixed Residential and Commercial</td>\n",
-       "      <td>3880530</td>\n",
-       "      <td>3844679.0</td>\n",
-       "      <td>35851.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>05</td>\n",
-       "      <td>Commercial and Office</td>\n",
-       "      <td>3437460</td>\n",
-       "      <td>3419895.0</td>\n",
-       "      <td>17565.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Parking Facilities</td>\n",
-       "      <td>1602393</td>\n",
-       "      <td>1595008.0</td>\n",
-       "      <td>7385.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>03</td>\n",
-       "      <td>Multi-Family Elevator Buildings</td>\n",
-       "      <td>7001929</td>\n",
-       "      <td>7019040.0</td>\n",
-       "      <td>-17111.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>08</td>\n",
-       "      <td>Public Facilities and Institutions</td>\n",
-       "      <td>12620915</td>\n",
-       "      <td>12951204.0</td>\n",
-       "      <td>-330289.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>09</td>\n",
-       "      <td>Open Space and Outdoor Recreation</td>\n",
-       "      <td>34384636</td>\n",
-       "      <td>50931135.0</td>\n",
-       "      <td>-16546499.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   LandUse                                 def  lotarea_sum  replacement_sum  \\\n",
-       "0       11                         Vacant Land     19827730        5147687.0   \n",
-       "1       07          Transportation and Utility     71574803       63542228.0   \n",
-       "2     None                                NULL      6833982        3204918.0   \n",
-       "3       02       Multi-Family Walkup Buildings     10315334        9600931.0   \n",
-       "4       01        One and Two Family Buildings      3832394        3598882.0   \n",
-       "5       06        Industrial and Manufacturing      1857582        1818215.0   \n",
-       "6       04    Mixed Residential and Commercial      3880530        3844679.0   \n",
-       "7       05               Commercial and Office      3437460        3419895.0   \n",
-       "8       10                  Parking Facilities      1602393        1595008.0   \n",
-       "9       03     Multi-Family Elevator Buildings      7001929        7019040.0   \n",
-       "10      08  Public Facilities and Institutions     12620915       12951204.0   \n",
-       "11      09   Open Space and Outdoor Recreation     34384636       50931135.0   \n",
-       "\n",
-       "    difference  \n",
-       "0   14680043.0  \n",
-       "1    8032575.0  \n",
-       "2    3629064.0  \n",
-       "3     714403.0  \n",
-       "4     233512.0  \n",
-       "5      39367.0  \n",
-       "6      35851.0  \n",
-       "7      17565.0  \n",
-       "8       7385.0  \n",
-       "9     -17111.0  \n",
-       "10   -330289.0  \n",
-       "11 -16546499.0  "
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "landuse_breakout = pd.read_sql_query('''\n",
     "SELECT \"LandUse\",\n",
@@ -1683,6 +1521,7 @@
     "GROUP BY \"LandUse\", def\n",
     "ORDER BY difference desc;\n",
     "''', cnx)\n",
+    "landuse_breakout.to_csv('../output/landuse.csv', index=False)\n",
     "landuse_breakout"
    ]
   },
