correct irrlot flag

--- a/lotarea 2020-04/notebooks/LotArea Analysis.ipynb
+++ b/lotarea 2020-04/notebooks/LotArea Analysis.ipynb
@@ -691,6 +691,214 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Which lots have lot areas that aren't equal to the front x depth or the shape_area? How far off are the lotareas and shape_areas from each other, percentage-wise?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BBL</th>\n",
+       "      <th>lotarea</th>\n",
+       "      <th>shape_area</th>\n",
+       "      <th>pct_difference</th>\n",
+       "      <th>pct_round</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2026040300</td>\n",
+       "      <td>44500.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>120270.270270</td>\n",
+       "      <td>120270.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2023560072</td>\n",
+       "      <td>696.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>11600.000000</td>\n",
+       "      <td>11600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2051310027</td>\n",
+       "      <td>3177.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>4125.974026</td>\n",
+       "      <td>4126.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4008200036</td>\n",
+       "      <td>50100.0</td>\n",
+       "      <td>1468.0</td>\n",
+       "      <td>3412.806540</td>\n",
+       "      <td>3413.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>3024460057</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2125.000000</td>\n",
+       "      <td>2125.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          BBL  lotarea  shape_area  pct_difference  pct_round\n",
+       "0  2026040300  44500.0        37.0   120270.270270   120270.0\n",
+       "1  2023560072    696.0         6.0    11600.000000    11600.0\n",
+       "2  2051310027   3177.0        77.0     4125.974026     4126.0\n",
+       "3  4008200036  50100.0      1468.0     3412.806540     3413.0\n",
+       "4  3024460057    170.0         8.0     2125.000000     2125.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regular_lot_discrepancies = pd.read_sql_query('''SELECT CAST(\"BBL\" AS TEXT),\n",
+    "ROUND(\"LotArea\") AS LotArea,\n",
+    "ROUND(\"Shape_Area\") AS Shape_Area,\n",
+    "ROUND(\"LotArea\") / ROUND(\"Shape_Area\") * 100 AS pct_difference,\n",
+    "ABS(ROUND(ROUND(\"LotArea\") / ROUND(\"Shape_Area\") * 100)) AS pct_round\n",
+    "FROM dcp.mappluto_unclipped p\n",
+    "WHERE \"IrrLotCode\" = 'N'\n",
+    "AND \"LotArea\" <> ROUND(\"LotFront\" * \"LotDepth\")\n",
+    "AND \"LotArea\" <> ROUND(\"Shape_Area\")\n",
+    "AND ROUND(\"Shape_Area\") <> 0\n",
+    "ORDER BY 5 DESC;''', cnx)\n",
+    "regular_lot_discrepancies.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the percentage difference between the lot area and the shape_area, how many fall into each percentage bucket? (This should give you some notion of how many records are close.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pct_round</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>5482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>5400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>4983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>4786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>4383</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pct_round  count\n",
+       "0       99.0   5482\n",
+       "1       98.0   5400\n",
+       "2      100.0   4983\n",
+       "3       97.0   4786\n",
+       "4       96.0   4383"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regular_pct_difference = pd.read_sql_query('''SELECT ABS(ROUND(ROUND(\"LotArea\") / ROUND(\"Shape_Area\") * 100)) AS pct_round,\n",
+    "COUNT(*)\n",
+    "FROM dcp.mappluto_unclipped p\n",
+    "WHERE \"IrrLotCode\" = 'N'\n",
+    "AND \"LotArea\" <> ROUND(\"LotFront\" * \"LotDepth\")\n",
+    "AND \"LotArea\" <> ROUND(\"Shape_Area\")\n",
+    "AND ROUND(\"Shape_Area\") <> 0\n",
+    "GROUP BY 1\n",
+    "ORDER BY 2 DESC;''', cnx)\n",
+    "regular_pct_difference.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Part 2: Irregular Lots"
    ]
   },
@@ -765,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -797,12 +1005,12 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>N</td>\n",
-       "      <td>709591</td>\n",
+       "      <td>133343</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>Y</td>\n",
-       "      <td>12451</td>\n",
+       "      <td>1575</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -810,11 +1018,11 @@
       ],
       "text/plain": [
        "  lotarea_ind   count\n",
-       "0           N  709591\n",
-       "1           Y   12451"
+       "0           N  133343\n",
+       "1           Y    1575"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +1035,7 @@
     "    ELSE 'N'\n",
     "END AS lotarea_ind\n",
     "FROM dcp.mappluto_unclipped\n",
-    "WHERE \"IrrLotCode\" = 'N'\n",
+    "WHERE \"IrrLotCode\" = 'Y'\n",
     ")\n",
     "SELECT lotarea_ind, COUNT(*)\n",
     "FROM irregular_lotarea\n",
