expand excel spreadsheet

--- a/lotarea 2020-04/notebooks/LotArea Analysis.ipynb
+++ b/lotarea 2020-04/notebooks/LotArea Analysis.ipynb
@@ -1408,6 +1408,199 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BBL</th>\n",
+       "      <th>lotarea</th>\n",
+       "      <th>shape_area</th>\n",
+       "      <th>pct_difference</th>\n",
+       "      <th>pct_round</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2025990300</td>\n",
+       "      <td>44000.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>157142.857143</td>\n",
+       "      <td>157143.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1013710051</td>\n",
+       "      <td>12780.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>44068.965517</td>\n",
+       "      <td>44069.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>4157490149</td>\n",
+       "      <td>200000.0</td>\n",
+       "      <td>539.0</td>\n",
+       "      <td>37105.751391</td>\n",
+       "      <td>37106.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4088100093</td>\n",
+       "      <td>1112.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>27800.000000</td>\n",
+       "      <td>27800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1013710030</td>\n",
+       "      <td>13950.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>24910.714286</td>\n",
+       "      <td>24911.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          BBL   lotarea  shape_area  pct_difference  pct_round\n",
+       "0  2025990300   44000.0        28.0   157142.857143   157143.0\n",
+       "1  1013710051   12780.0        29.0    44068.965517    44069.0\n",
+       "2  4157490149  200000.0       539.0    37105.751391    37106.0\n",
+       "3  4088100093    1112.0         4.0    27800.000000    27800.0\n",
+       "4  1013710030   13950.0        56.0    24910.714286    24911.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "irregular_lot_discrepancies = pd.read_sql_query('''SELECT CAST(\"BBL\" AS TEXT),\n",
+    "ROUND(\"LotArea\") AS LotArea,\n",
+    "ROUND(\"Shape_Area\") AS Shape_Area,\n",
+    "ROUND(\"LotArea\") / ROUND(\"Shape_Area\") * 100 AS pct_difference,\n",
+    "ABS(ROUND(ROUND(\"LotArea\") / ROUND(\"Shape_Area\") * 100)) AS pct_round\n",
+    "FROM dcp.mappluto_unclipped p\n",
+    "WHERE \"IrrLotCode\" = 'Y'\n",
+    "AND \"LotArea\" <> ROUND(\"Shape_Area\")\n",
+    "AND ROUND(\"Shape_Area\") <> 0\n",
+    "ORDER BY 5 DESC;''', cnx)\n",
+    "irregular_lot_discrepancies.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pct_round</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>10666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>10308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>9920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>9092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>8058</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pct_round  count\n",
+       "0       99.0  10666\n",
+       "1       98.0  10308\n",
+       "2      100.0   9920\n",
+       "3       97.0   9092\n",
+       "4       96.0   8058"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "irregular_pct_difference = pd.read_sql_query('''SELECT ABS(ROUND(ROUND(\"LotArea\") / ROUND(\"Shape_Area\") * 100)) AS pct_round,\n",
+    "COUNT(*)\n",
+    "FROM dcp.mappluto_unclipped p\n",
+    "WHERE \"IrrLotCode\" = 'Y'\n",
+    "AND \"LotArea\" <> ROUND(\"Shape_Area\")\n",
+    "AND ROUND(\"Shape_Area\") <> 0\n",
+    "GROUP BY 1\n",
+    "ORDER BY 2 DESC;\n",
+    "''', cnx)\n",
+    "irregular_pct_difference.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
